[metadata]
name = autoencoders
version = 0.0.1
author = david graff
author_email = deg711@g.harvard.edu
description = simple autoencoder implementations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
url = https://github.com/coleygroup/pcm-roughness
platforms = Linux

[options]
include_package_data = True
packages = find:
python_requires = >=3.9.*
install_requires =
	numpy
	pytorch_lightning
	rdkit >= 2022.9.4
	scipy
	sklearn
	torch
	typing_extensions
	
[options.extras_require]
dev =
	black
	flake8
	pytest
	pytest-cov
test =
	pytest
	pytest-cov
