[metadata]
name = ae_utils
version = 0.0.1
author = david graff
author_email = deg711@g.harvard.edu
description = simple autoencoder implementations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
url = https://github.com/davidegraff/autoencoders
platforms = Linux

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
	lighting >= 2.0
	numpy
	rdkit >= 2022.9.3
	scipy
	sklearn
	torch >= 2.0
	typing_extensions
	
[options.extras_require]
dev =
	black
	flake8
	pytest
	pytest-cov
test =
	pytest
	pytest-cov
